--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,18 +1,34 @@
 en:
   activerecord:
     attributes:
+      check:
+        domain_created_at: "Creation date"
+        domain_updated_at: "Update date"
       user:
         tos_accepted: "Terms of service"
         notifications_enabled: "Notifications enabled"
+    errors:
+      models:
+        check:
+          past: "can't be in the future"
 
   devise:
     registrations:
       new:
         tos_acceptance_html: "You must accept our Terms of service"
 
+  flashes:
+    user_not_authorized: "You are not authorized to access to this resource."
   shared:
     navbar:
       sign_up: "Sign up"
       sign_in: "Sign in"
       sign_out: "Sign out"
       profile: "Profile"
+
+  checks:
+    index:
+      no_check_yet_html: |
+          You have not set up a check yet.
+          Please add a <a href="%{new_domain_path}">domain</a>
+          or a <a href="%{new_ssl_path}">ssl</a> !
