Real label for locale selection

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,9 @@ en:
 
 
   shared:
+    locales:
+      en: English
+      fr: French
     navbar:
       sign_up: "Sign up"
       sign_in: "Sign in"
