--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -40,6 +40,9 @@ fr:
 
 
   shared:
+    locales:
+      en: Anglais
+      fr: Français
     navbar:
       sign_up: "Enregistrement"
       sign_in: "Connexion"
