Fix typo in french localization

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -47,7 +47,7 @@ fr:
       sign_up: "Enregistrement"
       sign_in: "Connexion"
       sign_out: "Déconnexion"
-      profile: "Profile"
+      profile: "Profil"
 
   checks:
     index:
