--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,6 +53,9 @@ en:
       en: English
       fr: French
     navbar:
+      my_checks: "My checks"
+      new_domain_check: "New domain check"
+      new_ssl_check: "New SSL check"
       sign_up: "Sign up"
       sign_in: "Sign in"
       sign_out: "Sign out"
@@ -60,11 +63,30 @@ en:
 
   checks:
     index:
+      title: List of your checks
       no_check_yet_html: |
           You have not set up a check yet.
           Please add a <a href="%{new_domain_path}">domain</a>
           or a <a href="%{new_ssl_path}">ssl</a> !
+
+    new:
+      title: New check
+      domain:
+        title: New domain check
+      ssl:
+        title: New SSL check
+
+    create:
+      saved: "Your check has been saved."
+      invalid: "Please check the form."
+
     form:
+      generic:
+        domain: Domain
+      domain:
+        domain: Domain name
+      ssl:
+        domain: Hostname
       notifications_hint: |
         Receive notifications to warn you when our system detects that the
         expiration date is coming. The time is set in number of days.
