[GEM] +kaminari for pagination.

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -23,6 +23,21 @@ fr:
       check:
         create: "Créer"
         update: "Valider"
+    page_entries_info:
+      one_page:
+        display_entries:
+          zero: "Pas de %{entry_name} trouvé."
+          one: "Affiche <b>1</b> %{entry_name}"
+          other: "Affiche <b>les %{count}</b> %{entry_name}"
+      more_pages:
+        display_entries: "Affiche %{entry_name} <b>%{first}&nbsp;-&nbsp;%{last}</b> de <b>%{total}</b> au total"
+  views:
+    pagination:
+      first: "&laquo; Début"
+      last: "Fin &raquo;"
+      previous: "&lsaquo; Préc"
+      next: "Suiv &rsaquo;"
+      truncate: "&hellip;"
 
   time:
     am: am
