--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -47,6 +47,11 @@ fr:
       short: "%d %b %H:%M"
     pm: pm
 
+  date:
+    formats:
+      short: "%d/%m/%Y"
+      long: "%A %d %B %Y"
+
   devise:
     registrations:
       new:
@@ -99,6 +104,7 @@ fr:
   checks:
     index:
       title: "Liste de vos vérifications"
+      no_matching_check: "Aucune vérification ne correspond à vos critères."
       no_check_yet_html: |
           Vous n'avez pas encore créé de vérification.
           Vous pouvez en ajouter pour un <a href="%{new_domain_path}">domaine</a>
@@ -115,6 +121,11 @@ fr:
       saved: La vérification est enregistrée.
       invalid: Veuillez vérifier le formulaire.
 
+    filters:
+      kind_domain: Domaine
+      kind_ssl: SSL
+      with_error: En erreur
+
     form:
       generic:
         domain: Domaine
@@ -125,3 +136,11 @@ fr:
       notifications_hint: |
         Recevez des notifications pour vous avertir lorsque notre système détecte
         que la date d'expiration approche. Le délai est indiqué ennombre de jours.
+
+    table:
+      domain: Nom
+      expiry_date: "Expiration"
+      edit: Modifier
+      kind_labels:
+        domain: Domaine
+        ssl: SSL
