--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -66,7 +66,7 @@ fr:
   simple_form:
     placeholders:
       notifications:
-        recipient: john@example.org
+        recipient: jean@example.com
 
   flashes:
     user_not_authorized: "Vous n'êtes pas autorisé•e à accéder à cette ressouce."
