Change the form label for interval
Specify that the interval is in days and add a placeholder.

--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -10,6 +10,12 @@ en:
       # html: '<abbr title="required">*</abbr>'
     error_notification:
       default_message: "Please review the problems below:"
+    labels:
+      defaults:
+        interval: "Interval (in days)"
+    placeholders:
+      defaults:
+        interval: 30
     # Examples
     # labels:
     #   defaults:
