Add a top bar on each page to show the beta status.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -75,7 +75,9 @@ en:
     home_header: 
       welcome: "Chexpire"
       intro: "Never forget to renew a domain name or SSL certificate."
-    
+    beta_banner: 
+      beta_info: "Chexpire is now in \"beta\" release. Limitation: only major TLD (.com/.net/.org/.fr) are supported for domain name checks."
+      issue_link: "Please report issues to "
 
   pages:
     
