--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -13,8 +13,10 @@ fr:
         domain_updated_at: "Date de modification"
         domain_expires_at: "Date d'expiration"
       notification:
+        label: Étiquette
         interval: Délai
         recipient: Destinataire
+        checks_count: Vérifications
       user:
         tos_accepted: "Conditions d'utilisation"
         notifications_enabled: "Notifications activées"
@@ -27,6 +29,10 @@ fr:
       check:
         create: "Créer"
         update: "Valider"
+      notification:
+        create: "Créer"
+        update: "Modifier"
+        delete: "Supprimer la notification"
     page_entries_info:
       one_page:
         display_entries:
@@ -71,6 +77,16 @@ fr:
 
   flashes:
     user_not_authorized: "Vous n'êtes pas autorisé•e à accéder à cette ressouce."
+    checks:
+      create: La vérification est enregistrée.
+      updated: La vérification est mise à jour.
+      invalid: Veuillez vérifier le formulaire.
+      destroyed: La vérification est supprimée.
+    notifications:
+      created: La notification est créée.
+      updated: "La notification est mise à jour."
+      destroyed: La notification est supprimée.
+      invalid: Veuillez vérifier le formulaire.
 
   notifications_mailer:
     domain_expires_soon:
@@ -101,6 +117,7 @@ fr:
       my_checks: "Mes vérifications"
       new_domain_check: "Nouveau nom de domaine"
       new_ssl_check: "Nouveau certificat SSL"
+      my_notifications: "Mes notifications"
       sign_up: "Enregistrement"
       sign_in: "Connexion"
       sign_out: "Déconnexion"
@@ -138,10 +155,6 @@ fr:
       ssl:
         title: Nouvelle vérification d'un certificat SSL
 
-    create:
-      saved: La vérification est enregistrée.
-      invalid: Veuillez vérifier le formulaire.
-
     filters:
       kind_domain: Domaine
       kind_ssl: SSL
@@ -176,3 +189,38 @@ fr:
         zero: "Dernière vérification réussie : aujourd'hui"
         one: "Dernière vérification réussie : hier"
         other: "Dernière vérification réussie il y a %{count} jours"
+
+  notifications:
+    index:
+      title: "Liste de vos notifications"
+      no_notification_yet_html: |
+        Vous n'avez pas encore créé de notification.
+        <a href="%{new_domain_path}">Créez votre première notification</a>.
+      explanation: |
+        Pour chacune de vos vérifications,
+        vous pouvez associer une ou plusieurs notifications que vous recevrez
+        par email un certain nombre de jours avant la date d'expiration.
+    table:
+      th:
+        edit: Modifier
+      interval_in_days:
+        one: 1 jour
+        other: "%{count} jours"
+    new:
+      title: Nouvelle notification
+    edit:
+      title: "Modification d'une notification"
+      checks:
+        zero: Aucune vérification associée.
+        one: Vérification associée
+        other: Vérifications associées
+      destroy_confirmation:
+        zero: "Confirmez-vous la suppression de cette notification ?"
+        one: |
+          Confirmez-vous la suppression ?
+          Vous ne recevrez plus la notification associée à cette vérification.
+        other: |
+          Confirmez-vous la suppression ?
+          Vous ne recevrez plus les notifications associées à ces vérifications.
+    form:
+      label_hint: Ce nom vous permet d'identifier cette notification pour l'associer à une vérification.
